--- a/custom.html
+++ b/custom.html
@@ -90,7 +90,7 @@
 <body>
   
 <header style="width: 100%;">
-  <img src="banner.png" alt="PrintVision Banner" style="width: 100%; height: auto; display: block;" />
+  <img src="banner.png" alt="PrintVision Banner" style="width: 100%; max-height: 250px; object-fit: cover; display: block;" />
 </header>
 
   <nav>
