--- a/custom.html
+++ b/custom.html
@@ -5,12 +5,17 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Custom - PrintVision</title>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
+  
+<style>
+  @media (max-width: 768px) {
+    header img {
+      max-height: 150px !important;
     }
+  }
+</style>
+
+  <style>
+    * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
       font-family: 'Segoe UI', Tahoma, sans-serif;
       background-color: #f8f9fb;
@@ -19,36 +24,27 @@
     nav {
       display: flex;
       justify-content: center;
-      gap: 2rem;
+      flex-wrap: wrap;
+      gap: 1.5rem;
       background-color: #1f1f2e;
       padding: 1rem;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     }
     nav a {
       color: #fff;
       text-decoration: none;
-      font-weight: 600;
-      letter-spacing: 0.5px;
-      transition: color 0.3s ease;
+      font-weight: bold;
     }
     nav a:hover {
       color: #00cfff;
     }
     main {
-      max-width: 1000px;
+      max-width: 600px;
       margin: 2rem auto;
-      padding: 0 1.5rem;
+      padding: 1rem;
     }
     h2 {
       font-size: 2rem;
-      margin-bottom: 1rem;
-      border-bottom: 2px solid #00cfff;
-      display: inline-block;
-      padding-bottom: 0.3rem;
-    }
-    p {
-      margin-bottom: 1rem;
-      line-height: 1.6;
+      margin-bottom: 1.5rem;
     }
     form {
       background: white;
@@ -56,8 +52,7 @@
       border-radius: 8px;
       box-shadow: 0 0 10px rgba(0,0,0,0.05);
     }
-    form input,
-    form textarea {
+    form input, form select, form button, form textarea {
       width: 100%;
       padding: 0.75rem;
       margin-bottom: 1rem;
@@ -69,14 +64,11 @@
       background-color: #1f1f2e;
       color: white;
       border: none;
-      padding: 0.75rem 1.5rem;
-      font-size: 1rem;
-      border-radius: 4px;
       cursor: pointer;
     }
     form button:hover {
       background-color: #00cfff;
-      color: #000;
+      color: black;
     }
     footer {
       background-color: #1f1f2e;
@@ -90,7 +82,12 @@
 <body>
   
 <header style="width: 100%;">
-  <img src="banner.png" alt="PrintVision Banner" style="width: 100%; max-height: 250px; object-fit: cover; display: block;" />
+  <img src="banner.png" alt="PrintVision Banner" style="
+    width: 100%;
+    max-height: 250px;
+    object-fit: cover;
+    display: block;
+  " />
 </header>
 
   <nav>
@@ -99,6 +96,8 @@
     <a href="about.html">About Us</a>
     <a href="custom.html">Custom Orders</a>
     <a href="contact.html">Contact</a>
+    <a href="login.html">Login</a>
+    <a href="signup.html">Sign Up</a>
   </nav>
   <main>
     
