--- a/login.html
+++ b/login.html
@@ -5,6 +5,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Login - PrintVision</title>
+  
+<style>
+  @media (max-width: 768px) {
+    header img {
+      max-height: 150px !important;
+    }
+  }
+</style>
+
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
@@ -15,7 +24,8 @@
     nav {
       display: flex;
       justify-content: center;
-      gap: 2rem;
+      flex-wrap: wrap;
+      gap: 1.5rem;
       background-color: #1f1f2e;
       padding: 1rem;
     }
@@ -72,11 +82,20 @@
 <body>
   
 <header style="width: 100%;">
-  <img src="banner.png" alt="PrintVision Banner" style="width: 100%; max-height: 250px; object-fit: cover; display: block;" />
+  <img src="banner.png" alt="PrintVision Banner" style="
+    width: 100%;
+    max-height: 250px;
+    object-fit: cover;
+    display: block;
+  " />
 </header>
 
   <nav>
     <a href="index.html">Home</a>
+    <a href="products.html">Products</a>
+    <a href="about.html">About Us</a>
+    <a href="custom.html">Custom Orders</a>
+    <a href="contact.html">Contact</a>
     <a href="login.html">Login</a>
     <a href="signup.html">Sign Up</a>
   </nav>
