--- a/contact.html
+++ b/contact.html
@@ -1,71 +1,71 @@
 
 <!DOCTYPE html>
-<html><head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Contact</title>
-<style>
-  body {
-    font-family: 'Segoe UI', sans-serif;
-    background-color: #f9f9f9;
-    margin: 0;
-    padding: 0;
-  }
-  header img {
-    width: 100%;
-    max-height: 250px;
-    object-fit: cover;
-  }
-  nav {
-    background-color: #1f1f2e;
-    padding: 1rem;
-    display: flex;
-    justify-content: center;
-    gap: 2rem;
-    flex-wrap: wrap;
-  }
-  nav a {
-    color: #fff;
-    text-decoration: none;
-    font-weight: 500;
-  }
-  nav a:hover {
-    color: #00cfff;
-  }
-  main {
-    max-width: 600px;
-    margin: 2rem auto;
-    padding: 1rem;
-    background: white;
-    border-radius: 10px;
-    box-shadow: 0 2px 10px rgba(0,0,0,0.05);
-  }
-  form input, form textarea, form button {
-    width: 100%;
-    margin-bottom: 1rem;
-    padding: 0.75rem;
-    font-size: 1rem;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-  }
-  form button {
-    background-color: #1f1f2e;
-    color: white;
-    font-weight: bold;
-    cursor: pointer;
-  }
-  form button:hover {
-    background-color: #00cfff;
-    color: black;
-  }
-  footer {
-    background-color: #1f1f2e;
-    color: white;
-    text-align: center;
-    padding: 1rem;
-    margin-top: 3rem;
-  }
-</style>
+<html>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Contact Us</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f9f9f9;
+      margin: 0;
+      padding: 0;
+    }
+    header img {
+      width: 100%;
+      max-height: 250px;
+      object-fit: cover;
+    }
+    nav {
+      background-color: #1f1f2e;
+      padding: 1rem;
+      display: flex;
+      justify-content: center;
+      gap: 2rem;
+      flex-wrap: wrap;
+    }
+    nav a {
+      color: white;
+      text-decoration: none;
+    }
+    nav a:hover {
+      color: #00cfff;
+    }
+    main {
+      max-width: 600px;
+      margin: 2rem auto;
+      padding: 2rem;
+      background: white;
+      border-radius: 8px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    }
+    form input, form textarea, form button {
+      width: 100%;
+      margin-bottom: 1rem;
+      padding: 0.75rem;
+      font-size: 1rem;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+    }
+    form button {
+      background-color: #1f1f2e;
+      color: white;
+      font-weight: bold;
+      cursor: pointer;
+    }
+    form button:hover {
+      background-color: #00cfff;
+      color: black;
+    }
+    footer {
+      background-color: #1f1f2e;
+      color: white;
+      text-align: center;
+      padding: 1rem;
+      margin-top: 3rem;
+    }
+  </style>
 </head>
 <body>
 <header><img src="banner.png" alt="PrintVision banner" /></header>
@@ -109,4 +109,5 @@
 
 </main>
 <footer>&copy; 2025 PrintVision. All rights reserved.</footer>
-</body></html>
+</body>
+</html>
